Integrating new smoke tests and refining Crunchbase markdown for test compat

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -118,33 +118,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-18 14:43:50.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m135\u001b[0m - \u001b[1mReddit: Extract stage 120,261 chars -> 4,148 chars (3%)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:50.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m136\u001b[0m - \u001b[1mReddit: Combine stage 4,148 chars -> 4,291 chars (103%)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:50.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:50.276\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 4 pages\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:52.840\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 50 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 5 pages\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:52.926\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1m31,106 -> 4,834 chars (16%)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:54.959\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1m89,756 -> 5,770 chars (6%)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.036\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m4,291 -> 2,906 chars (68% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.036\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m4,834 -> 3,700 chars (77% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.037\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m5,770 -> 4,682 chars (81% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.038\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m149\u001b[0m - \u001b[1m3,048 -> 2,151 chars (71% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.042\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m162\u001b[0m - \u001b[1m11,690 -> 17,667 chars (151% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-18 14:43:55.043\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m160\u001b[0m - \u001b[1m17,943 -> 17,667 chars (98%)\u001b[0m\n"
+      "\u001b[32m2024-08-19 09:25:55.417\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m10,107 -> 8,965 chars (89% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m2,455 -> 1,571 chars (64% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m963 -> 704 chars (73% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,546 -> 1,222 chars (79% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,739 -> 1,513 chars (87% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,091 -> 843 chars (77% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,200 -> 2,858 chars (89% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,429 -> 4,413 chars (69% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,678 -> 1,366 chars (81% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.344\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m3,144 -> 4,691 chars (149% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.344\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m137\u001b[0m - \u001b[1mReddit: Extract stage 29,208 chars -> 3,258 chars (11%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.345\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1mReddit: Combine stage 3,258 chars -> 4,691 chars (144%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.601\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:56.633\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 4 pages\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:59.208\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 50 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 5 pages\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:25:59.327\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m61\u001b[0m - \u001b[1m31,106 -> 4,834 chars (16%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:01.696\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1m84,875 -> 6,051 chars (7%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:01.768\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,691 -> 3,132 chars (67% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,834 -> 3,700 chars (77% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,051 -> 4,861 chars (80% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,005 -> 2,125 chars (71% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.399\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m11,631 -> 17,869 chars (154% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.400\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m167\u001b[0m - \u001b[1m18,587 -> 17,869 chars (96%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.480\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m168\u001b[0m - \u001b[1mExtractive fraction: 81%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.481\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m169\u001b[0m - \u001b[1mPercent of URLs in sources: 100%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m170\u001b[0m - \u001b[1mSuspicious URLs: set()\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:26:57.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m171\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Written to evaluation/98point6_98point6/20240818_144355.md\n"
+      "Written to evaluation/98point6_98point6/20240819_092657.md\n"
      ]
     }
    ],
@@ -278,7 +293,7 @@
     ")\n",
     "\n",
     "\n",
-    "from core import URLShortener\n",
+    "from core import URLShortener, extract_suspicious_urls, extractive_fraction, extractive_fraction_urls, num_cache_mentions\n",
     "from loguru import logger\n",
     "\n",
     "\n",
@@ -287,6 +302,13 @@
     "    reddit_result = process_reddit(target, num_threads=num_reddit_threads)\n",
     "    glassdoor_result = await process_glassdoor(target, max_review_pages=max_glassdoor_review_pages, max_job_pages=max_glassdoor_job_pages, url_override=glassdoor_url)\n",
     "    news_result = process_news(target, max_results=max_news_articles)\n",
+    "\n",
+    "    unshortened_context = \"\\n\\n\".join([\n",
+    "        reddit_result.summary.output_text,\n",
+    "        glassdoor_result.summary_markdown,\n",
+    "        news_result.summary_markdown,\n",
+    "        crunchbase_markdown,\n",
+    "    ])\n",
     "\n",
     "    url_shortener = URLShortener()\n",
     "\n",
@@ -304,11 +326,14 @@
     "        })\n",
     "    result.content = url_shortener.unshorten_markdown(result.content.strip().strip(\"```markdown\").strip(\"```\"))\n",
     "\n",
-    "    input_content_length = len(reddit_result.summary.output_text) + len(glassdoor_result.summary_markdown) + len(news_result.summary_markdown) + len(crunchbase_markdown)\n",
+    "    input_content_length = len(unshortened_context)\n",
     "    output_content_length = len(result.content)\n",
     "\n",
-    "    # print(f\"unified_summary: input_content_length={input_content_length:,} chars, output_content_length={output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
     "    logger.info(f\"{input_content_length:,} -> {output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
+    "    logger.info(\"Extractive fraction: {:.0%}\", extractive_fraction(result.content, unshortened_context))\n",
+    "    logger.info(\"Percent of URLs in sources: {:.0%}\", extractive_fraction_urls(result.content, unshortened_context))\n",
+    "    logger.info(\"Suspicious URLs: {}\", extract_suspicious_urls(result.content, unshortened_context))\n",
+    "    logger.info(\"Cache mentions: {} (should be zero)\", num_cache_mentions(result.content))\n",
     "\n",
     "\n",
     "    with open(eval_filename(target, extension=\"md\"), \"w\") as f:\n",
