--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -125,41 +125,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-19 09:25:55.417\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m10,107 -> 8,965 chars (89% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m2,455 -> 1,571 chars (64% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m963 -> 704 chars (73% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,546 -> 1,222 chars (79% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,739 -> 1,513 chars (87% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,091 -> 843 chars (77% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,200 -> 2,858 chars (89% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,429 -> 4,413 chars (69% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,678 -> 1,366 chars (81% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.344\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m3,144 -> 4,691 chars (149% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.344\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m137\u001b[0m - \u001b[1mReddit: Extract stage 29,208 chars -> 3,258 chars (11%)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.345\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1mReddit: Combine stage 3,258 chars -> 4,691 chars (144%)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.601\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:56.633\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 4 pages\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:59.208\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 50 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 5 pages\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:25:59.327\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m61\u001b[0m - \u001b[1m31,106 -> 4,834 chars (16%)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:01.696\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1m84,875 -> 6,051 chars (7%)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:01.768\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,691 -> 3,132 chars (67% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,834 -> 3,700 chars (77% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,051 -> 4,861 chars (80% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:01.769\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,005 -> 2,125 chars (71% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.399\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m11,631 -> 17,869 chars (154% of original)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.400\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m167\u001b[0m - \u001b[1m18,587 -> 17,869 chars (96%)\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.480\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m168\u001b[0m - \u001b[1mExtractive fraction: 81%\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.481\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m169\u001b[0m - \u001b[1mPercent of URLs in sources: 100%\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m170\u001b[0m - \u001b[1mSuspicious URLs: set()\u001b[0m\n",
-      "\u001b[32m2024-08-19 09:26:57.482\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m171\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n"
+      "\u001b[32m2024-08-19 09:32:37.824\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.626\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m10,107 -> 8,965 chars (89% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.627\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m2,455 -> 1,571 chars (64% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.628\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m963 -> 704 chars (73% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.628\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,546 -> 1,222 chars (79% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.629\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,739 -> 1,513 chars (87% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.629\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,091 -> 843 chars (77% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.630\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,200 -> 2,858 chars (89% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.630\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,429 -> 4,413 chars (69% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.631\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m1,678 -> 1,366 chars (81% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.745\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m3,144 -> 4,691 chars (149% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.745\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m137\u001b[0m - \u001b[1mReddit: Extract stage 29,208 chars -> 3,258 chars (11%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.746\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m143\u001b[0m - \u001b[1mReddit: Combine stage 3,258 chars -> 4,691 chars (144%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.749\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m152\u001b[0m - \u001b[1mExtractive fraction: 67%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.750\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m153\u001b[0m - \u001b[1mPercent of URLs in sources: 100%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.750\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m154\u001b[0m - \u001b[1mSuspicious URLs: set()\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.751\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mreddit.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m155\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.949\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:38.982\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm, scraping remaining 4 pages\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.562\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 50 reviews from https://www.glassdoor.com/Reviews/98point6-Reviews-E1181484.htm in 5 pages\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.681\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m61\u001b[0m - \u001b[1m31,106 -> 4,834 chars (16%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.684\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m69\u001b[0m - \u001b[1mExtractive fraction: 50%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.685\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m70\u001b[0m - \u001b[1mPercent of URLs in sources: 100%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.686\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1mSuspicious URLs: set()\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:41.686\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mglassdoor.summarizer\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m72\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.085\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m95\u001b[0m - \u001b[1m84,875 -> 6,051 chars (7%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.091\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m103\u001b[0m - \u001b[1mExtractive fraction: 15%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.091\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m104\u001b[0m - \u001b[1mPercent of URLs in sources: 80%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.092\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mSuspicious URLs: {'https://www.98point6.com'}\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.092\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnews.summarize\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m106\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.168\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,691 -> 3,132 chars (67% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.169\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m4,834 -> 3,700 chars (77% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.170\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m6,051 -> 4,861 chars (80% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.171\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m179\u001b[0m - \u001b[1m3,005 -> 2,125 chars (71% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.192\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m194\u001b[0m - \u001b[1m11,631 -> 17,869 chars (154% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.193\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m166\u001b[0m - \u001b[1m18,587 -> 17,869 chars (96%)\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.196\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m167\u001b[0m - \u001b[1mExtractive fraction: 81%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.196\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m168\u001b[0m - \u001b[1mPercent of URLs in sources: 100%\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.197\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m169\u001b[0m - \u001b[1mSuspicious URLs: set()\u001b[0m\n",
+      "\u001b[32m2024-08-19 09:32:44.198\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36munified_summary\u001b[0m:\u001b[36m170\u001b[0m - \u001b[1mCache mentions: 0 (should be zero)\u001b[0m\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Written to evaluation/98point6_98point6/20240819_092657.md\n"
+      "Written to evaluation/98point6_98point6/20240819_093244.md\n"
      ]
     }
    ],
