--- a/src/test_news.ipynb
+++ b/src/test_news.ipynb
@@ -17,10 +17,9 @@
     }
    ],
    "source": [
-    "from core import CompanyProduct, init_langchain_cache, init_requests_cache\n",
+    "from core import CompanyProduct, init\n",
     "\n",
-    "init_requests_cache()\n",
-    "init_langchain_cache()\n",
+    "init()\n",
     "\n"
    ]
   },
