--- a/src/test_reddit.ipynb
+++ b/src/test_reddit.ipynb
@@ -17,10 +17,9 @@
     }
    ],
    "source": [
-    "from core import CompanyProduct, init_langchain_cache, init_requests_cache\n",
+    "from core import CompanyProduct, init\n",
     "\n",
-    "init_requests_cache()\n",
-    "init_langchain_cache()\n",
+    "init()\n",
     "\n"
    ]
   },
@@ -160,135 +159,6 @@
    "source": [
     "llm_output = reddit_result.summary.output_text\n",
     "print(llm_output[:500])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Summary stats:\n",
-      "- Input context length: 107,902 characters\n",
-      "- Output summary length: 6,536 characters\n",
-      "- Extractive fraction: 64%\n",
-      "- Extractive fraction (URLs): 100%\n",
-      "- Suspicious URLs: set()\n",
-      "- Cache mentions: 1\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from core import extractive_fraction, extractive_fraction_urls, extract_suspicious_urls, num_cache_mentions\n",
-    "\n",
-    "\n",
-    "print(f\"\"\"\n",
-    "Summary stats:\n",
-    "- Input context length: {len(llm_context):,} characters\n",
-    "- Output summary length: {len(llm_output):,} characters\n",
-    "- Extractive fraction: {extractive_fraction(llm_output, llm_context):.0%}\n",
-    "- Extractive fraction (URLs): {extractive_fraction_urls(llm_output, llm_context):.0%}\n",
-    "- Suspicious URLs: {extract_suspicious_urls(llm_output, llm_context)}\n",
-    "- Cache mentions: {num_cache_mentions(llm_output)}\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for url in extract_suspicious_urls(llm_output, llm_context):\n",
-    "    print(url)\n",
-    "\n",
-    "    # Show the line in the summary where the URL appears\n",
-    "    for line in llm_output.split(\"\\n\"):\n",
-    "        if url in line:\n",
-    "            print(line)\n",
-    "            break\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "## Comment ID lbbkb5g with +14 score by [LostMinimum8404 on 2024-07-02](https://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/lbbkb5g/) (in reply to ID 1dtp97n):\n"
-     ]
-    }
-   ],
-   "source": [
-    "for line in llm_context.split(\"\\n\"):\n",
-    "    if \"LostMinimum8404\" in line:\n",
-    "        print(line)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nhttps://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/lbkb5g/\\nhttps://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/lbbkb5g/\\n'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "https://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/lbkb5g/\n",
-    "https://www.reddit.com/r/MMORPG/comments/1dtp97n/daybreak_acquires_singularity_6_palia_developer/lbbkb5g/\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.reddit.com/r/CozyGamers/comments/1dt80wx/daybreak_acquires_singularity_6_developer_of_palia/lbat2at/']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import re\n",
-    "from typing import List\n",
-    "\n",
-    "def extract_urls(markdown: str) -> List[str]:\n",
-    "    return re.findall(r\"\\[[^]]+\\]\\(([^)\\]]+)\\)\", markdown)\n",
-    "\n",
-    "\n",
-    "def test_extract_urls():\n",
-    "    assert extract_urls(\"[a](b) [c](d)\") == [\"b\", \"d\"]\n",
-    "    assert extract_urls(\"[a](b) [c](d [e](f)\") == [\"b\", \"f\"]\n",
-    "\n",
-    "test_extract_urls()\n",
-    "\n",
-    "extract_urls('[hi](cache://reddit/270]\\n- \"Yeah literally the worst gaming company I know of.\" [magvadis, Reddit, 2024-07-02](https://www.reddit.com/r/CozyGamers/comments/1dt80wx/daybreak_acquires_singularity_6_developer_of_palia/lbat2at/)')"
    ]
   },
   {
