--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -24,11 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct, init_langchain_cache, init_requests_cache\n",
+    "from core import CompanyProduct, init\n",
     "\n",
-    "init_requests_cache()\n",
-    "init_langchain_cache()\n",
-    "\n",
+    "init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "target = CompanyProduct.same(\"98point6\")"
    ]
   },
@@ -38,44 +44,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reddit import RedditSummary, run as process_reddit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from glassdoor import GlassdoorResult, run as process_glassdoor\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rename it to the old function name\n",
-    "from news import run as process_news\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from core import eval_filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from crunchbase import run as process_crunchbase\n"
+    "from reddit import RedditSummary, run as process_reddit\n",
+    "from glassdoor import GlassdoorResult, run as process_glassdoor\n",
+    "from news import run as process_news\n",
+    "from crunchbase import run as process_crunchbase\n",
+    "\n",
+    "from core import eval_filename, nest_markdown"
    ]
   },
   {
@@ -89,15 +63,6 @@
     "templates = jinja2.Environment(\n",
     "    loader=jinja2.FileSystemLoader(\"templates\"),\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from core import nest_markdown"
    ]
   },
   {
@@ -199,9 +164,6 @@
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "from core import CompanyProduct\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
     "\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
@@ -304,27 +266,27 @@
     "        (\n",
     "            \"human\",\n",
     "            \"\"\"\n",
-    "            Company: {company_name}\n",
-    "            Product: {product_name}\n",
-    "            \n",
-    "            Reddit sources: \n",
-    "            {reddit_text}\n",
+    "Company: {company_name}\n",
+    "Product: {product_name}\n",
     "\n",
-    "            Glassdoor sources:\n",
-    "            {glassdoor_text}\n",
+    "Reddit sources: \n",
+    "{reddit_text}\n",
     "\n",
-    "            News sources:\n",
-    "            {news_text}\n",
+    "Glassdoor sources:\n",
+    "{glassdoor_text}\n",
     "\n",
-    "            Crunchbase information:\n",
-    "            {crunchbase_text}\n",
+    "News sources:\n",
+    "{news_text}\n",
+    "\n",
+    "Crunchbase information:\n",
+    "{crunchbase_text}\n",
     "            \"\"\",\n",
     "        ),\n",
     "    ]\n",
     ")\n",
     "\n",
     "\n",
-    "from core import URLShortener, extract_suspicious_urls, extractive_fraction, extractive_fraction_urls, num_cache_mentions\n",
+    "from core import URLShortener, extract_suspicious_urls, extractive_fraction, extractive_fraction_urls, num_cache_mentions, cleanse_markdown\n",
     "from loguru import logger\n",
     "\n",
     "\n",
@@ -355,7 +317,7 @@
     "        \"news_text\": url_shortener.shorten_markdown(news_result.summary_markdown),\n",
     "        \"crunchbase_text\": url_shortener.shorten_markdown(crunchbase_markdown),\n",
     "        })\n",
-    "    result.content = url_shortener.unshorten_markdown(result.content.strip().strip(\"```markdown\").strip(\"```\"))\n",
+    "    result.content = cleanse_markdown(result.content)\n",
     "\n",
     "    input_content_length = len(unshortened_context)\n",
     "    output_content_length = len(result.content)\n",
