--- a/src/test_crunchbase.ipynb
+++ b/src/test_crunchbase.ipynb
@@ -37,7 +37,7 @@
    ],
    "source": [
     "from typing import Optional, Iterable\n",
-    "from search import search, SearchResult\n",
+    "from google_search import search, SearchResult\n",
     "\n",
     "def filter_url(search_iter: Iterable[SearchResult], url_substring: str) -> Iterable[SearchResult]:\n",
     "    for result in search_iter:\n",
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "from search import search\n",
+    "from google_search import search\n",
     "\n",
     "results = list(\n",
     "    search(f'site:crunchbase.com/organization \"Mt. Joy\"', num=10)\n",
