--- a/src/test_search.ipynb
+++ b/src/test_search.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "from search import search\n",
+    "from google_search import search\n",
     "\n",
     "for i, result in enumerate(search(\"site:98point6.com about us\", num=20)):\n",
     "    print(f\"\"\"\n",
