--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -404,6 +404,7 @@
     "\n",
     "        return f.name\n",
     "\n",
+    "# Set the log level\n",
     "import sys\n",
     "logger.remove()\n",
     "logger.add(sys.stderr, level=\"INFO\")\n",
