Refactor of CompanyProduct into Seed

--- a/src/test_crunchbase.ipynb
+++ b/src/test_crunchbase.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct\n",
+    "from core import Seed\n",
     "\n",
-    "target = CompanyProduct.same(\"Mt. Joy\")"
+    "target = Seed.init(\"Mt. Joy\")"
    ]
   },
   {
