--- a/src/test_general_search.ipynb
+++ b/src/test_general_search.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct, init\n",
+    "from core import Seed, init\n",
     "\n",
     "init()"
    ]
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = CompanyProduct(\"Singularity 6\", \"Palia\")"
+    "target = Seed.init(\"Singularity 6\", \"Palia\")"
    ]
   },
   {
