--- a/src/test_glassdoor.ipynb
+++ b/src/test_glassdoor.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct, init\n",
+    "from core import Seed, init\n",
     "\n",
     "init()"
    ]
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = CompanyProduct.same(\"98point6\")"
+    "target = Seed.init(\"98point6\")"
    ]
   },
   {
