--- a/src/test_indeed.ipynb
+++ b/src/test_indeed.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "from core import CompanyProduct, init\n",
+    "from core import Seed, init\n",
     "\n",
     "init()"
    ]
@@ -44,7 +44,7 @@
    "source": [
     "from core import make_experiment_dir\n",
     "\n",
-    "target = CompanyProduct.same(\"Rippling\")\n",
+    "target = Seed.init(\"Rippling\")\n",
     "experiment_dir = make_experiment_dir(target)"
    ]
   },
