--- a/src/unified_summary.ipynb
+++ b/src/unified_summary.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct, init\n",
+    "from core import Seed, init\n",
     "\n",
     "init()"
    ]
@@ -100,7 +100,7 @@
     "import unified\n",
     "\n",
     "markdown_file = await unified.run(\n",
-    "    CompanyProduct.same(\"98point6\"), \n",
+    "    Seed.init(\"98point6\", domain=\"98point6.com\"), \n",
     "    num_reddit_threads=10, \n",
     "    max_glassdoor_review_pages=5, \n",
     "    max_glassdoor_job_pages=0,\n",
