--- a/src/unified_summary.ipynb
+++ b/src/unified_summary.ipynb
@@ -113,7 +113,7 @@
     "import sys\n",
     "from loguru import logger\n",
     "logger.remove()\n",
-    "logger.add(sys.stderr, level=\"DEBUG\")\n",
+    "logger.add(sys.stderr, level=\"INFO\")\n",
     "\n",
     "import unified\n",
     "\n",
