--- a/src/test_customer_experience.ipynb
+++ b/src/test_customer_experience.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unified customer feedback POC\n",
+    "# Unified customer feedback\n",
     "\n",
     "The idea is to use a single map-reduce pattern for multiple different sources of customer feedback:\n",
     "\n",
@@ -12,21 +12,7 @@
     "- App stores\n",
     "- (Maybe) formal reviews\n",
     "\n",
-    "We'll use the extract-organize-abstract pattern with map-reduce to handle extract-organize.\n",
-    "\n",
-    "## Challenges\n",
-    "\n",
-    "- The length of the input will vary drastically depending on the data source\n",
-    "\n",
-    "## Steps\n",
-    "\n",
-    "1. Init\n",
-    "1. Define the target\n",
-    "1. Fetch Reddit raw data\n",
-    "1. Fetch app review raw data\n",
-    "1. Format all into markdown\n",
-    "1. Pack\n",
-    "1. LLM pipeline"
+    "We'll use the extract-organize-abstract pattern with map-reduce to handle extract-organize.\n"
    ]
   },
   {
@@ -184,44 +170,6 @@
     "\n",
     "with open(f\"{dir}/customer_experience_version2.md\", \"w\") as f:\n",
     "    f.write(customer_experience_result.output_text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run 1: S6 / Palia\n",
-    "\n",
-    "Overall the results were great\n",
-    "\n",
-    "To improve:\n",
-    "\n",
-    "- Citations are VERY inconsistent: (starry101, Source, 2024-04-09), (Mousekiwiiks, Source, 2023-08-17), (Anonymous, Steam, 2024-08-01), (Thumbs Up, Steam, 2024-08-21). I think this could be solved by making the citations better upstream\n",
-    "- It's heavily weighted towards Reddit even though Steam is probably a better data source. I'm guessing that it's simply that there's more Reddit text\n",
-    "- It took 3 minutes (!) to run\n",
-    "\n",
-    "# Run 2: S6 / Palia\n",
-    "\n",
-    "Changes:\n",
-    "\n",
-    "1. Updated the citation format in both Reddit and Steam pipelines\n",
-    "2. Fetched 500 Steam reviews, up from 100\n",
-    "3. Trimmed a long document to 100k characters (it was 260k chars)\n",
-    "\n",
-    "Results:\n",
-    "\n",
-    "- Worked very nicely!\n",
-    "- One issue was multiple extracts from the same source, which made it look more serious\n",
-    "- 4 minutes :(\n",
-    "\n",
-    "# Run 3: S6 / Palia\n",
-    "\n",
-    "Changes:\n",
-    "\n",
-    "1. URL shortener\n",
-    "2. Added the evaluation logger\n",
-    "\n",
-    "It's a LOT faster, though it generated some malformed links like cache://... I'm also noticing that it tends to have more Steam content than the first run"
    ]
   },
   {
